force-app/main/default/objects/Rule_Condition__c/Rule_Condition__c.object-meta.xml
<CustomObject>
    <description>Defines the condition(s) that trigger a rule.</description>
    <label>Rule Condition</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Rule Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>