force-app/main/default/objects/Rule_Condition__c/fields/Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>Filter_Type__c</fullName>
    <inlineHelpText>Value: compare to a constant. Field: compare to another field&apos;s value.</inlineHelpText>
    <label>Filter Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>