force-app/main/default/objects/Rule_Condition__c/fields/Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value__c</fullName>
    <inlineHelpText>The value to compare against (or API name of another field if Filter_Type = &quot;Field&quot;).</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>