force-app/main/default/objects/Rule_Condition__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <inlineHelpText>Identifier for Advanced Condition logic (10, 20, 30...).</inlineHelpText>
    <label>Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>