force-app/main/default/objects/Rule_Condition__c/fields/Product_Rule__c.field-meta.xml
<CustomField>
    <fullName>Product_Rule__c</fullName>
    <inlineHelpText>Parent rule. Deleting the rule deletes all its conditions.</inlineHelpText>
    <label>Product Rule</label>
    <referenceTo>Product_Rule__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>Rule_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>