force-app/main/default/objects/Rule_Condition__c/fields/Tested_Field__c.field-meta.xml
<CustomField>
    <fullName>Tested_Field__c</fullName>
    <inlineHelpText>API name of the field to test, e.g., Product2.Family, Account.Industry, Quantity.</inlineHelpText>
    <label>Tested Field</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>