force-app/main/default/objects/Rule_Condition__c/fields/Tested_Object__c.field-meta.xml
<CustomField>
    <fullName>Tested_Object__c</fullName>
    <inlineHelpText>Which object are we testing: the opportunity, a line item, or a bundle option?</inlineHelpText>
    <label>Tested Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity Line</fullName>
            </value>
            <value>
                <fullName>Bundle Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>